syntax = "proto3";

package proto;

import "gogoproto/gogo.proto";
import "cosmos/staking/v1beta1/staking.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/babylonchain/finality-provider/finality-provider/proto";

service FinalityProviders {
    // GetInfo returns the information of the daemon
    rpc GetInfo (GetInfoRequest) returns (GetInfoResponse);

    // CreateFinalityProvider generates and saves a finality provider object
    rpc CreateFinalityProvider (CreateFinalityProviderRequest)
        returns (CreateFinalityProviderResponse);

    // RegisterFinalityProvider sends a transactions to the consumer chain to register a BTC
    // finality provider
    rpc RegisterFinalityProvider (RegisterFinalityProviderRequest)
        returns (RegisterFinalityProviderResponse);

    // AddFinalitySignature sends a transactions to the consumer chain to add a Finality
    // signature for a block
    rpc AddFinalitySignature(AddFinalitySignatureRequest)
        returns (AddFinalitySignatureResponse);

    // QueryFinalityProvider queries the finality provider
    rpc QueryFinalityProvider (QueryFinalityProviderRequest) returns (QueryFinalityProviderResponse);

    // QueryFinalityProviderList queries a list of finality providers
    rpc QueryFinalityProviderList (QueryFinalityProviderListRequest)
        returns (QueryFinalityProviderListResponse);
}

message GetInfoRequest {
}

message GetInfoResponse {
    string version = 1;
}

message CreateFinalityProviderRequest {
    // key_name is the identifier key in keyring
    string key_name = 1;
    // passphrase is used to encrypt the keys
    string passphrase = 2;
    // hd_path is the hd path for private key derivation
    string hd_path = 3;
    // chain_id is the identifier of the consumer chain that the finality provider connected to
    string chain_id = 4;
    // description defines the description terms for the finality provider
    bytes description = 5;
    // commission defines the commission rate for the finality provider
    string commission = 6 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false
    ];
}

message CreateFinalityProviderResponse {
    FinalityProviderInfo finality_provider = 1;
}

message RegisterFinalityProviderRequest {
    // btc_pk is hex string of the BTC secp256k1 public key of the finality provider encoded in BIP-340 spec
    string btc_pk = 1;
    // passphrase is used to encrypt the keys
    string passphrase = 2;
}

message RegisterFinalityProviderResponse {
    // hash of the successful chain registration transaction
    string tx_hash = 1;
}

message AddFinalitySignatureRequest {
    // btc_pk is hex string of the BTC secp256k1 public key of the finality provider encoded in BIP-340 spec
    string btc_pk = 1;
    // height is the height of the chain block
    uint64 height = 2;
    // app_hash is the AppHash of the chain block
    bytes app_hash = 3;
}

message AddFinalitySignatureResponse {
    // hash of the successful chain finality signature submission transaction
    string tx_hash = 1;
    // the hex string of the extracted Bitcoin secp256k1 private key
    string extracted_sk_hex = 2;
    // the hex string of the local Bitcoin secp256k1 private key
    string local_sk_hex = 3;
}

message QueryFinalityProviderRequest {
    // btc_pk is hex string of the BTC secp256k1 public key of the finality provider encoded in BIP-340 spec
    string btc_pk = 1;
}

message QueryFinalityProviderResponse {
    FinalityProviderInfo finality_provider = 1;
}

message QueryFinalityProviderListRequest {
    // TODO add pagination in case the list gets large
}

message QueryFinalityProviderListResponse {
    repeated FinalityProviderInfo finality_providers = 1;
    // TODO add pagination in case the list gets large
}

message FinalityProvider {
    // chain_pk is the chain secp256k1 PK of this finality provider
    bytes chain_pk = 1;
    // btc_pk is the BTC secp256k1 PK of the finality provider encoded in BIP-340 spec
    bytes btc_pk = 2;
    // description defines the description terms for the finality provider
    bytes description = 3;
    // commission defines the commission rate for the finality provider
    string commission = 4 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false
    ];
    // pop is the proof of possession of chain_pk and btc_pk
    ProofOfPossession pop = 5;
    // master_pub_rand is the master public randomness of the finality provider
    // encoded as a base58 string
    string master_pub_rand = 6;
    // registered_epoch is the epoch number when the finality provider is registered on Babylon
    uint64 registered_epoch = 7;
    // key_name is the identifier of the keyring
    string key_name = 8;
    // chain_id is the identifier of the consumer chain that the finality provider connected to
    string chain_id = 9;
    // last_voted_height defines the height of the last voted chain block
    uint64 last_voted_height = 10;
    // last_processed_height defines the height of the last successfully processed block
    // even though the vote is not cast
    uint64 last_processed_height = 11;
    // status defines the current finality provider status
    FinalityProviderStatus status = 12;
}

// FinalityProviderInfo is the basic information of a finality provider mainly for external usage
message FinalityProviderInfo {
    // chain_pk_hex is the hex string of the chain secp256k1 PK of this finality provider
    string chain_pk_hex = 1;
    // btc_pk_hex is the hex string of the BTC secp256k1 PK of the finality provider encoded in BIP-340 spec
    string btc_pk_hex = 2;
    // description defines the description terms for the finality provider
    Description description = 3;
    // commission defines the commission rate for the finality provider
    string commission = 4 [
        (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
        (gogoproto.nullable)   = false
    ];
    // registered_epoch is the epoch number when the finality provider is registered on Babylon
    uint64 registered_epoch = 5;
    // master_pub_rand is the master public randomness of the finality provider
    // encoded as a base58 string
    string master_pub_rand = 6;
    // last_voted_height defines the height of the last voted chain block
    uint64 last_voted_height = 7;
    // status defines the current finality provider status
    string status = 8;
    // is_running shows whether the finality provider is running within the daemon
    bool is_running = 9;
}

// Description defines description fields for a finality provider
message Description {
    string moniker = 1;
    string identity = 2;
    string website = 3;
    string security_contact = 4;
    string details = 5;
}

// ProofOfPossession is the proof of possession that a chain secp256k1
// secret key and a Bitcoin secp256k1 secret key are held by the same
// person
message ProofOfPossession {
    // chain_sig is the signature generated via sign(sk_chain, pk_btc)
    bytes chain_sig = 1;
    // btc_sig is the signature generated via sign(sk_btc, chain_sig)
    // the signature follows encoding in BIP-340 spec
    bytes btc_sig = 2;
}

message SchnorrRandPair {
    bytes pub_rand = 1;
    bytes sec_rand = 2;
}

// FinalityProviderStatus is the status of a finality provider
// a FinalityProvider object has 4 states:
//  - Created - created and managed by finality provider client, not registered to
//  the consumer chain yet
//  - Registered - created and registered to the consumer chain, but not voting yet (No
//  delegated stake)
//  - Active - created and registered to the consumer chain with stake to vote
//  - Inactive - created and registered to the consumer chain with no stake to vote.
//  Finality Provider was already active.
// Valid State Transactions:
//  - Created   -> Registered
//  - Registered -> Active
//  - Active    -> Inactive
//  - Inactive  -> Active
enum FinalityProviderStatus {
    option (gogoproto.goproto_enum_prefix) = false;

    // CREATED defines a finality provider that is awaiting registration
    CREATED = 0 [(gogoproto.enumvalue_customname) = "CREATED"];
    // REGISTERED defines a finality provider that has been registered
    // to the consumer chain but has no delegated stake
    REGISTERED = 1 [(gogoproto.enumvalue_customname) = "REGISTERED"];
    // ACTIVE defines a finality provider that is delegated to vote
    ACTIVE = 2 [(gogoproto.enumvalue_customname) = "ACTIVE"];
    // INACTIVE defines a finality provider whose delegations are reduced to zero but not slashed
    INACTIVE = 3 [(gogoproto.enumvalue_customname) = "INACTIVE"];
    // SLASHED defines a finality provider that has been slashed
    SLASHED = 4 [(gogoproto.enumvalue_customname) = "SLASHED"];
}
